# open-work

./: .dockerignore  .env.example  .gitignore  COOLIFY.md  Dockerfile.api  Dockerfile.web  README.md  docker-compose.production.yaml  docker-compose.yml  pyproject.toml  requirements.txt  skills-lock.json
api/: __init__.py  database.py  main.py  models.py  schemas.py
api/routes/: chapters.py  config.py  export.py  generate.py  jobs.py  proxy.py  research.py
api/services/: chapter_service.py  job_service.py  pipeline_service.py
jobs/: ai_healthcare_diagnostics.yaml  ai_paper.yaml
prompts/base/: researcher.md  reviewer.md  writer.md
prompts/chapters/: chapter_1.yaml  chapter_2.yaml  chapter_3.yaml
prompts/humanizer/: entropy.md  polish.md
prompts/styles/: academic_balanced.yaml  academic_formal.yaml  narrative.yaml
src/: config.py
src/cli/: app.py  display.py  prompts.py
src/export/: exporter.py
src/humanizer/: pipeline.py  rewriter.py
src/proxy/: __init__.py  fetcher.py  manager.py  refresh.py  validator.py
src/research/: arxiv.py  backpressure.py  base.py  cache.py  crossref.py  openalex.py  orchestrator.py  query_router.py  retry.py  semantic_scholar.py  (+2 more)
tests/: conftest.py  test_ai_detector.py  test_chapter_routes.py  test_chunk_streaming.py  test_citation_compiler.py  test_config.py  test_exporter.py  test_fact_checker.py  test_humanizer.py  test_research_infra.py  test_router.py  test_style_checker.py  test_text_analysis.py
web/: eslint.config.mjs  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
(+71 files in other folders)
