[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-work"
version = "0.1.0"
description = "Automated chapter-by-chapter research paper writing system"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0",
    "InquirerPy>=0.3.4",
    "pyyaml>=6.0",
    "toml>=0.10",
    "httpx>=0.27",
    "pydantic>=2.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "sqlalchemy>=2.0",
    "requests>=2.31.0",
    "tenacity>=8.2.0",
    "arxiv>=2.0.0",
    "sse-starlette>=2.0.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "sqlalchemy>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
]

[project.scripts]
open-work = "src.cli.app:app"

[tool.setuptools.packages.find]
include = ["src*", "api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
